--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: BetaFunBounds
+Package: IneqBetaFun
 Type: Package
 Title: An R Package for New Inequalities for the Beta Function and Certain Ratios of Beta Functions
 Version: 0.0.1.0
